--- a/fBReader/build.gradle
+++ b/fBReader/build.gradle
@@ -1,24 +1,30 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "25.0.1"
-
+    compileSdkVersion 25
+    buildToolsVersion '26.0.2'
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "org.geometerplus.zlibrary.ui.android"
-        minSdkVersion 8
-        targetSdkVersion 19
+        minSdkVersion 18
+        targetSdkVersion 25
 
         ndk {
-            moduleName "DeflatingDecompressor-v3"
+// moduleName "DeflatingDecompressor-v3"
+            abiFilters "armeabi", "armeabi-v7a", "x86", "mips"
         }
+// vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
+        debug {
+
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
+
         sourceSets {
             main {
                 jni.srcDirs = []
@@ -28,15 +34,15 @@ android {
 }
 
 dependencies {
-    compile project(':ambilWarna')
-    compile project(':code')
-    compile project(':library')
-    compile project(':superToasts')
-    compile 'com.android.support:support-v4:19.1.0'
+    compile 'com.android.support:support-v4:25.0.1'
     compile files('libs/LingvoIntegration_2.5.2.12.jar')
     compile files('libs/httpmime-4.2.5.jar')
     compile files('libs/json-simple-1.1.1.jar')
     compile files('libs/nanohttpd-2.0.5.jar')
     compile files('libs/open-dictionary-api-1.2.1.jar')
     compile files('libs/pdfparse.jar')
+    implementation project(':ambilWarna')
+    implementation project(':code')
+    implementation project(':library')
+    implementation project(':superToasts')
 }
