--- a/fBReader/build.gradle
+++ b/fBReader/build.gradle
@@ -45,4 +45,11 @@ dependencies {
     implementation project(':code')
     implementation project(':library')
     implementation project(':superToasts')
+    implementation project(':translate_bd')
+    compile 'com.google.code.gson:gson:2.8.5'
+    compile 'com.squareup.okhttp3:okhttp:3.9.1'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'junit'
+
 }
