--- a/fBReader/build.gradle
+++ b/fBReader/build.gradle
@@ -34,6 +34,7 @@ android {
 }
 
 dependencies {
+    testCompile 'junit:junit:4.12'
     compile 'com.android.support:support-v4:25.0.1'
     compile files('libs/LingvoIntegration_2.5.2.12.jar')
     compile files('libs/httpmime-4.2.5.jar')
@@ -46,10 +47,8 @@ dependencies {
     implementation project(':library')
     implementation project(':superToasts')
     implementation project(':translate_bd')
-    compile 'com.google.code.gson:gson:2.8.5'
+    compile 'com.google.code.gson:gson:2.3.0'
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'junit'
-
 }
