--- a/fBReader/src/main/AndroidManifest.xml
+++ b/fBReader/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
 				<data android:scheme="BookReadingException"/>
 			</intent-filter>
 		</activity>
+
+		<activity android:name="dyg.activity.TransWebViewActivity"></activity>
 		<activity android:name=".error.BugReportActivity" android:label="FBReader crash" android:theme="@style/FBReader.Activity" android:process=":crash" android:configChanges="orientation|keyboardHidden|screenSize" android:exported="false"/>
 		<activity android:name="org.geometerplus.android.fbreader.crash.FixBooksDirectoryActivity" android:theme="@style/FBReader.Dialog" android:process=":crash" android:configChanges="orientation|keyboardHidden|screenSize" android:exported="false">
 			<intent-filter>
