--- a/fBReader/build.gradle
+++ b/fBReader/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'pub.devrel:easypermissions:0.1.5'
 }
