--- a/fBReader/build.gradle
+++ b/fBReader/build.gradle
@@ -1,28 +1,29 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'com.aliyun.ams.emas-services'
 android {
     compileSdkVersion 25
     buildToolsVersion '26.0.2'
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
-        applicationId "org.geometerplus.dyg.android"
+        applicationId "com.dyg.android.reader"
         minSdkVersion 18
+        versionName '2.6.0'
+        versionCode 20201113
         targetSdkVersion 25
 
         ndk {
-// moduleName "DeflatingDecompressor-v3"
             abiFilters "armeabi", "armeabi-v7a", "x86", "mips"
         }
-// vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
-        debug {
-
-        }
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+        buildTypes {
+            release {
+                minifyEnabled false
+                proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            }
+            debug {
+            }
         }
 
         sourceSets {
@@ -49,6 +50,7 @@ dependencies {
     compile files('libs/open-dictionary-api-1.2.1.jar')
     compile files('libs/pdfparse.jar')
     implementation project(':ambilWarna')
+    implementation (name :'bugly_crashreport_upgrade-1.4.2',ext :"aar")
     implementation project(':code')
 //    compile(name:'abtest-release-190102-01',ext:'aar')
     implementation project(':library')
