--- a/fBReader/src/main/AndroidManifest.xml
+++ b/fBReader/src/main/AndroidManifest.xml
@@ -22,10 +22,8 @@
         android:allowBackup="true"
         android:icon="@drawable/fbreader"
         android:label="@string/app_name"
-        android:appComponentFactory="empty"
         android:logo="@drawable/fbreader_bw"
-        tools:replace="android:allowBackup,android:appComponentFactory"
-        tools:targetApi="p">
+        tools:replace="android:allowBackup">
         <uses-library android:name="org.apache.http.legacy" android:required="false" />
         <activity
             android:name="org.geometerplus.android.fbreader.error.BookReadingErrorActivity"
